--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vg-portfolio",
-  "homepage": "https://github.com/V98Ganz/vg-protfolio/",
+  "homepage": "https://v98ganz.github.io/vg-protfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
